--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       position: absolute;
       bottom: 0;
       left: 10px;
-      padding: 10px;
+      min-width:15px;
+      min-height:15px;
       border: 1px dashed #c3c3c3;
       background-color: blue;
     }
